[gd_scene load_steps=4 format=2]

[ext_resource path="res://SCENES/P1/Level_4_p1.tscn" type="PackedScene" id=1]
[ext_resource path="res://SCENES/P2/Level_4_p2.tscn" type="PackedScene" id=2]
[ext_resource path="res://LEVELS/TUTORIAL_LEVEL_1.gd" type="Script" id=3]

[node name="LEVEL_1" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="CanvasLayer/VBoxContainer/ViewportContainer"]
size = Vector2( 480, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Level_4_p1" parent="CanvasLayer/VBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 244.0
margin_right = 480.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="CanvasLayer/VBoxContainer/ViewportContainer2"]
size = Vector2( 480, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Level_4_p2" parent="CanvasLayer/VBoxContainer/ViewportContainer2/Viewport" instance=ExtResource( 2 )]
position = Vector2( 0, 480 )
scale = Vector2( 1, -1 )
